dev/test_programs/INVALID/group13/empty_if.go
package main

func main() {
	if {
		println("hello")
	}
}